// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SiteHeader renders correctly with all nav links 1`] = `
.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c2 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c5 {
  color: #3b82f6;
  text-decoration: none;
  line-height: 1;
  transition: color 0.2s ease-in-out;
}

.c5:hover {
  color: #3b82f6;
}

.c5:focus-visible {
  outline: 2px solid #3b82f6;
  outline-offset: 2px;
}

.c0 {
  position: sticky;
  top: 0;
  z-index: 100;
  background: #0a0a0f;
  border-bottom: 1px solid rgba(255, 255, 255, 0.08);
  padding: 0.75rem 0;
}

.c3 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 1.25rem;
  font-weight: bold;
  color: #ffffff;
  cursor: pointer;
  text-decoration: none;
}

.c4 {
  display: none;
  gap: 2rem;
  align-items: center;
}

.c7 {
  background: none;
  border: none;
  cursor: pointer;
  padding: 0.5rem;
  min-width: 44px;
  min-height: 44px;
  color: #ffffff;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c6 {
  background: none;
  border: 1px solid rgba(255, 255, 255, 0.2);
  cursor: pointer;
  padding: 0.25rem 0.625rem;
  min-width: 44px;
  min-height: 44px;
  font-size: 0.75rem;
  font-weight: bold;
  letter-spacing: 0.08em;
  text-transform: uppercase;
  color: #ffffff;
  border-radius: 4px;
  transition: all 0.2s ease;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c6:hover {
  background: rgba(255, 255, 255, 0.05);
  border-color: rgba(255, 255, 255, 0.4);
}

.c6:focus-visible {
  outline: 2px solid #3b82f6;
  outline-offset: 3px;
}

.c9 {
  position: fixed;
  inset: 0;
  background: rgba(0, 0, 0, 0.5);
  z-index: 200;
  opacity: 0;
  pointer-events: none;
  transition: opacity 0.3s ease;
}

.c10 {
  position: fixed;
  top: 0;
  right: 0;
  height: 100%;
  width: 280px;
  background: #0a0a0f;
  z-index: 300;
  display: flex;
  flex-direction: column;
  transform: translateX(100%);
  transition: transform 0.3s ease;
  border-left: 1px solid rgba(255, 255, 255, 0.1);
  box-shadow: -8px 0 32px rgba(0, 0, 0, 0.8);
}

.c11 {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  padding: 0.75rem 1.5rem;
  border-bottom: 1px solid rgba(255, 255, 255, 0.08);
  flex-shrink: 0;
}

.c12 {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  padding: 1.5rem;
  overflow-y: auto;
}

.c13 {
  margin-top: auto;
  margin-left: 1.5rem;
  margin-bottom: 1.5rem;
  align-self: flex-start;
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 900px) {
  .c4 {
    display: flex;
  }
}

@media (min-width: 900px) {
  .c8 {
    display: none;
  }
}

<div>
  <header
    class="c0"
  >
    <section
      class="c1"
    >
      <div
        class="c2"
      >
        <a
          class="c3"
          href="/"
        >
          Andrea Agostini
        </a>
        <nav
          aria-label="Main navigation"
          class="c4"
        >
          <a
            class="c5"
            href="#projects"
          >
            Projects
          </a>
          <a
            class="c5"
            href="#skills"
          >
            Skills
          </a>
          <a
            class="c5"
            href="#experience"
          >
            Experience
          </a>
          <a
            class="c5"
            href="#contact"
          >
            Contact
          </a>
          <button
            aria-label="Switch to English"
            class="c6"
          >
            EN
          </button>
        </nav>
        <button
          aria-controls="mobile-nav"
          aria-expanded="false"
          aria-label="Open menu"
          class="c7 c8"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
          >
            <line
              x1="3"
              x2="21"
              y1="6"
              y2="6"
            />
            <line
              x1="3"
              x2="21"
              y1="12"
              y2="12"
            />
            <line
              x1="3"
              x2="21"
              y1="18"
              y2="18"
            />
          </svg>
        </button>
      </div>
    </section>
  </header>
  <div
    class="c9"
    role="presentation"
  />
  <div
    aria-label="Navigation menu"
    aria-modal="true"
    class="c10"
    id="mobile-nav"
    role="dialog"
  >
    <div
      class="c11"
    >
      <button
        aria-label="Close menu"
        class="c7"
      >
        <svg
          aria-hidden="true"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
        >
          <line
            x1="18"
            x2="6"
            y1="6"
            y2="18"
          />
          <line
            x1="6"
            x2="18"
            y1="6"
            y2="18"
          />
        </svg>
      </button>
    </div>
    <nav
      aria-label="Mobile navigation"
    >
      <div
        class="c12"
      >
        <a
          class="c5"
          href="#projects"
        >
          Projects
        </a>
        <a
          class="c5"
          href="#skills"
        >
          Skills
        </a>
        <a
          class="c5"
          href="#experience"
        >
          Experience
        </a>
        <a
          class="c5"
          href="#contact"
        >
          Contact
        </a>
      </div>
    </nav>
    <button
      aria-label="Switch to English"
      class="c6 c13"
    >
      EN
    </button>
  </div>
</div>
`;

exports[`SiteHeader renders correctly with no nav links 1`] = `
.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c2 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c0 {
  position: sticky;
  top: 0;
  z-index: 100;
  background: #0a0a0f;
  border-bottom: 1px solid rgba(255, 255, 255, 0.08);
  padding: 0.75rem 0;
}

.c3 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 1.25rem;
  font-weight: bold;
  color: #ffffff;
  cursor: pointer;
  text-decoration: none;
}

.c4 {
  display: none;
  gap: 2rem;
  align-items: center;
}

.c6 {
  background: none;
  border: none;
  cursor: pointer;
  padding: 0.5rem;
  min-width: 44px;
  min-height: 44px;
  color: #ffffff;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c5 {
  background: none;
  border: 1px solid rgba(255, 255, 255, 0.2);
  cursor: pointer;
  padding: 0.25rem 0.625rem;
  min-width: 44px;
  min-height: 44px;
  font-size: 0.75rem;
  font-weight: bold;
  letter-spacing: 0.08em;
  text-transform: uppercase;
  color: #ffffff;
  border-radius: 4px;
  transition: all 0.2s ease;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c5:hover {
  background: rgba(255, 255, 255, 0.05);
  border-color: rgba(255, 255, 255, 0.4);
}

.c5:focus-visible {
  outline: 2px solid #3b82f6;
  outline-offset: 3px;
}

.c8 {
  position: fixed;
  inset: 0;
  background: rgba(0, 0, 0, 0.5);
  z-index: 200;
  opacity: 0;
  pointer-events: none;
  transition: opacity 0.3s ease;
}

.c9 {
  position: fixed;
  top: 0;
  right: 0;
  height: 100%;
  width: 280px;
  background: #0a0a0f;
  z-index: 300;
  display: flex;
  flex-direction: column;
  transform: translateX(100%);
  transition: transform 0.3s ease;
  border-left: 1px solid rgba(255, 255, 255, 0.1);
  box-shadow: -8px 0 32px rgba(0, 0, 0, 0.8);
}

.c10 {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  padding: 0.75rem 1.5rem;
  border-bottom: 1px solid rgba(255, 255, 255, 0.08);
  flex-shrink: 0;
}

.c11 {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  padding: 1.5rem;
  overflow-y: auto;
}

.c12 {
  margin-top: auto;
  margin-left: 1.5rem;
  margin-bottom: 1.5rem;
  align-self: flex-start;
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 900px) {
  .c4 {
    display: flex;
  }
}

@media (min-width: 900px) {
  .c7 {
    display: none;
  }
}

<div>
  <header
    class="c0"
  >
    <section
      class="c1"
    >
      <div
        class="c2"
      >
        <a
          class="c3"
          href="/"
        >
          AA
        </a>
        <nav
          aria-label="Main navigation"
          class="c4"
        >
          <button
            aria-label="Switch to English"
            class="c5"
          >
            EN
          </button>
        </nav>
        <button
          aria-controls="mobile-nav"
          aria-expanded="false"
          aria-label="Open menu"
          class="c6 c7"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
          >
            <line
              x1="3"
              x2="21"
              y1="6"
              y2="6"
            />
            <line
              x1="3"
              x2="21"
              y1="12"
              y2="12"
            />
            <line
              x1="3"
              x2="21"
              y1="18"
              y2="18"
            />
          </svg>
        </button>
      </div>
    </section>
  </header>
  <div
    class="c8"
    role="presentation"
  />
  <div
    aria-label="Navigation menu"
    aria-modal="true"
    class="c9"
    id="mobile-nav"
    role="dialog"
  >
    <div
      class="c10"
    >
      <button
        aria-label="Close menu"
        class="c6"
      >
        <svg
          aria-hidden="true"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
        >
          <line
            x1="18"
            x2="6"
            y1="6"
            y2="18"
          />
          <line
            x1="6"
            x2="18"
            y1="6"
            y2="18"
          />
        </svg>
      </button>
    </div>
    <nav
      aria-label="Mobile navigation"
    >
      <div
        class="c11"
      />
    </nav>
    <button
      aria-label="Switch to English"
      class="c5 c12"
    >
      EN
    </button>
  </div>
</div>
`;
